Use Files.readString/writeString to simplify code